"""
AIVA V2 æ˜“ç”¨å±¤å®¢æˆ¶ç«¯å¯¦ç¾
è®“è·¨èªè¨€èª¿ç”¨åƒæœ¬åœ°å‡½æ•¸èª¿ç”¨ä¸€æ¨£ç°¡å–®

è¨­è¨ˆç›®æ¨™ï¼š
1. æ¯” V1 çš„ requests.post() æ›´ç°¡å–®
2. å°è£æ‰€æœ‰ gRPC è¤‡é›œæ€§
3. æä¾›è‡ªå‹•é‡è©¦å’ŒéŒ¯èª¤è™•ç†
4. æ”¯æŒé€£æ¥æ± å’Œæœå‹™ç™¼ç¾
5. çµ±ä¸€å”è­°æ”¯æ´ (gRPC/HTTP/MQ)
"""

import asyncio
import json
import logging
from dataclasses import dataclass, field
from typing import Any, Optional, Dict, List
from pathlib import Path
import time

from ..cross_language.core import CrossLanguageConfig, PythonAdapter
from ..enums import ProgrammingLanguage
from ..schemas.generated.messaging import AIVARequest, AIVAResponse
from ..utils.logging import setup_logger
from ..utils.retry import RetryConfig, retry_async

# å¼•å…¥ gRPC å®¢æˆ¶ç«¯
from ..grpc.grpc_client import AIVAGRPCClient
from ..messaging.compatibility_layer import message_broker

logger = setup_logger(__name__)


# å¸¸é‡å®šç¾©
HEALTH_PATH = "/health"

@dataclass
class ServiceEndpoint:
    """æœå‹™ç«¯é»é…ç½®"""
    language: ProgrammingLanguage
    host: str = "localhost"
    port: int = 50051
    health_path: str = HEALTH_PATH
    timeout: float = 30.0
    enabled: bool = True


class AivaClient:
    """AIVA V2 çµ±ä¸€å®¢æˆ¶ç«¯
    
    ä½¿ç”¨ç¤ºä¾‹ï¼š
    ```python
    # ç°¡å–®çš„ç•°æ­¥èª¿ç”¨ - å°±åƒ V1 ä¸€æ¨£ç°¡å–®ï¼
    response = await aiva_client.call_rust("fuzzing_task", {"target": "example.com"})
    response = await aiva_client.call_go("sca_scan", {"project_path": "/path/to/code"})
    response = await aiva_client.call_typescript("web_scan", {"url": "https://example.com"})
    
    # æ‰¹é‡èª¿ç”¨
    results = await aiva_client.call_multiple([
        ("rust", "fuzzing_task", {"target": "example.com"}),
        ("go", "sca_scan", {"project_path": "/path"}),
    ])
    ```
    """
    
    def __init__(
        self, 
        config: Optional[CrossLanguageConfig] = None,
        auto_discover: bool = True,
        grpc_enabled: bool = True,
        grpc_server_address: str = "localhost:50051"
    ):
        """åˆå§‹åŒ– AIVA å®¢æˆ¶ç«¯
        
        Args:
            config: è·¨èªè¨€é€šä¿¡é…ç½®
            auto_discover: æ˜¯å¦è‡ªå‹•ç™¼ç¾æœå‹™
            grpc_enabled: æ˜¯å¦å•Ÿç”¨ gRPC æ”¯æ´
            grpc_server_address: gRPC æœå‹™å™¨åœ°å€
        """
        self.config = config or CrossLanguageConfig()
        self.adapter = PythonAdapter()
        self.endpoints: Dict[str, ServiceEndpoint] = {}
        self._connection_pools: Dict[str, Any] = {}
        
        # gRPC æ”¯æ´
        self.grpc_enabled = grpc_enabled
        self.grpc_client: Optional[AIVAGRPCClient] = None
        if grpc_enabled:
            try:
                self.grpc_client = AIVAGRPCClient(grpc_server_address)
                logger.info(f"ğŸ”Œ gRPC å®¢æˆ¶ç«¯å·²åˆå§‹åŒ–: {grpc_server_address}")
            except Exception as e:
                logger.warning(f"âš ï¸  gRPC åˆå§‹åŒ–å¤±æ•—ï¼Œå°‡ä½¿ç”¨å‚™ç”¨å”è­°: {e}")
                self.grpc_enabled = False
        
        # é è¨­æœå‹™ç«¯é»
        self._setup_default_endpoints()
        
        if auto_discover:
            # åœ¨äº‹ä»¶å¾ªç’°ä¸­å»¶é²åŸ·è¡Œæœå‹™ç™¼ç¾
            self._auto_discover = True
        
        logger.info("AivaClient initialized with V2 unified communication")
    
    def _setup_default_endpoints(self):
        """è¨­ç½®é è¨­æœå‹™ç«¯é»"""
        self.endpoints = {
            "rust": ServiceEndpoint(
                language=ProgrammingLanguage.RUST,
                host="localhost",
                port=50052,
                health_path=HEALTH_PATH
            ),
            "go": ServiceEndpoint(
                language=ProgrammingLanguage.GO,
                host="localhost",
                port=50053,
                health_path=HEALTH_PATH
            ),
            "typescript": ServiceEndpoint(
                language=ProgrammingLanguage.TYPESCRIPT,
                host="localhost",
                port=50054,
                health_path=HEALTH_PATH
            ),
        }
    
    async def _discover_services(self):
        """è‡ªå‹•ç™¼ç¾å¯ç”¨æœå‹™"""
        logger.info("Starting service discovery...")
        
        for service_name, endpoint in self.endpoints.items():
            try:
                is_healthy = await self._check_service_health(service_name)
                endpoint.enabled = is_healthy
                
                if is_healthy:
                    logger.info(f"âœ… Service '{service_name}' is available at {endpoint.host}:{endpoint.port}")
                else:
                    logger.warning(f"âŒ Service '{service_name}' is not available")
                    
            except Exception as e:
                logger.error(f"Service discovery failed for {service_name}: {e}")
                endpoint.enabled = False
    
    async def _check_service_health(self, service_name: str) -> bool:
        """æª¢æŸ¥æœå‹™å¥åº·ç‹€æ…‹"""
        endpoint = self.endpoints.get(service_name)
        if not endpoint:
            return False
        
        try:
            # é€™è£¡æ‡‰è©²ä½¿ç”¨ gRPC health check
            # æš«æ™‚ä½¿ç”¨ç°¡å–®çš„é€£æ¥æ¸¬è©¦
            await asyncio.wait_for(
                asyncio.open_connection(endpoint.host, endpoint.port),
                timeout=2.0
            )
            return True
        except (asyncio.TimeoutError, OSError):
            return False
    
    # ==================== æ ¸å¿ƒèª¿ç”¨æ–¹æ³• ====================
    
    async def call_rust(self, task: str, params: Dict[str, Any]) -> Dict[str, Any]:
        """èª¿ç”¨ Rust æœå‹™
        
        Args:
            task: ä»»å‹™åç¨±
            params: ä»»å‹™åƒæ•¸
            
        Returns:
            ä»»å‹™åŸ·è¡Œçµæœ
        """
        return await self._call_service("rust", task, params)
    
    async def call_go(self, task: str, params: Dict[str, Any]) -> Dict[str, Any]:
        """èª¿ç”¨ Go æœå‹™
        
        Args:
            task: ä»»å‹™åç¨±
            params: ä»»å‹™åƒæ•¸
            
        Returns:
            ä»»å‹™åŸ·è¡Œçµæœ
        """
        return await self._call_service("go", task, params)
    
    async def call_typescript(self, task: str, params: Dict[str, Any]) -> Dict[str, Any]:
        """èª¿ç”¨ TypeScript æœå‹™
        
        Args:
            task: ä»»å‹™åç¨±
            params: ä»»å‹™åƒæ•¸
            
        Returns:
            ä»»å‹™åŸ·è¡Œçµæœ
        """
        return await self._call_service("typescript", task, params)
    
    async def call_service(
        self, 
        language: str, 
        task: str, 
        params: Dict[str, Any]
    ) -> Dict[str, Any]:
        """é€šç”¨æœå‹™èª¿ç”¨æ–¹æ³•
        
        Args:
            language: ç›®æ¨™èªè¨€ (rust/go/typescript)
            task: ä»»å‹™åç¨±
            params: ä»»å‹™åƒæ•¸
            
        Returns:
            ä»»å‹™åŸ·è¡Œçµæœ
        """
        return await self._call_service(language, task, params)
    
    # ==================== æ‰¹é‡æ“ä½œ ====================
    
    async def call_multiple(
        self, 
        calls: List[tuple[str, str, Dict[str, Any]]]
    ) -> List[Dict[str, Any]]:
        """æ‰¹é‡ä¸¦ç™¼èª¿ç”¨å¤šå€‹æœå‹™
        
        Args:
            calls: èª¿ç”¨åˆ—è¡¨ï¼Œæ¯å€‹å…ƒç´ ç‚º (language, task, params)
            
        Returns:
            æ‰€æœ‰èª¿ç”¨çš„çµæœåˆ—è¡¨
        """
        tasks = [
            self._call_service(language, task, params)
            for language, task, params in calls
        ]
        
        results = await asyncio.gather(*tasks, return_exceptions=True)
        
        # è™•ç†ç•°å¸¸çµæœ
        processed_results = []
        for i, result in enumerate(results):
            if isinstance(result, Exception):
                processed_results.append({
                    "success": False,
                    "error": str(result),
                    "call_index": i
                })
            else:
                processed_results.append(result)
        
        return processed_results
    
    # ==================== å…§éƒ¨å¯¦ç¾ ====================
    
    @retry_async(RetryConfig(max_attempts=3, delay=1.0))
    async def _call_service(
        self, 
        language: str, 
        task: str, 
        params: Dict[str, Any]
    ) -> Dict[str, Any]:
        """å…§éƒ¨æœå‹™èª¿ç”¨å¯¦ç¾ï¼ŒåŒ…å«é‡è©¦é‚è¼¯ - æ”¯æ´ gRPC/HTTP/MQ å¤šå”è­°"""
        
        endpoint = self.endpoints.get(language)
        if not endpoint:
            raise ValueError(f"Unknown language: {language}")
        
        if not endpoint.enabled:
            raise ConnectionError(f"Service {language} is not available")
        
        start_time = time.time()
        
        try:
            # 1. å„ªå…ˆå˜—è©¦ gRPC å”è­° 
            if self.grpc_enabled and self.grpc_client:
                try:
                    logger.debug(f"ğŸ”„ å˜—è©¦ gRPC èª¿ç”¨: {language}.{task}")
                    
                    # ä½¿ç”¨ gRPC å®¢æˆ¶ç«¯
                    grpc_result = await self.grpc_client.execute_cross_language_task(
                        task=f"{language}.{task}",
                        parameters=params
                    )
                    
                    if grpc_result.get("success", False):
                        execution_time = time.time() - start_time
                        logger.info(f"âœ… gRPC èª¿ç”¨æˆåŠŸ: {language}.{task} ({execution_time:.3f}s)")
                        
                        return {
                            "success": True,
                            "result": grpc_result.get("result", {}),
                            "protocol": "gRPC",
                            "execution_time": execution_time,
                            "language": language,
                            "task": task
                        }
                        
                except Exception as e:
                    logger.warning(f"âš ï¸  gRPC èª¿ç”¨å¤±æ•—ï¼Œå˜—è©¦å‚™ç”¨å”è­°: {e}")
            
            # 2. æ§‹å»ºé€šç”¨è«‹æ±‚
            request = AIVARequest(
                request_id=f"aiva_{int(time.time() * 1000)}",
                task=task,
                parameters=params,
                timeout=endpoint.timeout
            )
            
            # 3. HTTP/å…¶ä»–å”è­°èª¿ç”¨ - é€™è£¡ç›®å‰ä½¿ç”¨æ¨¡æ“¬å¯¦ç¾
            # å¯¦éš›ä¸Šæ‡‰è©²ä½¿ç”¨ gRPC èª¿ç”¨
            result = await self._execute_grpc_call(endpoint, request)
            
            duration = time.time() - start_time
            logger.info(f"âœ… {language} task '{task}' completed in {duration:.2f}s")
            
            return {
                "success": True,
                "result": result,
                "language": language,
                "task": task,
                "duration": duration,
                "request_id": request.request_id
            }
            
        except Exception as e:
            duration = time.time() - start_time
            logger.error(f"âŒ {language} task '{task}' failed in {duration:.2f}s: {e}")
            
            return {
                "success": False,
                "error": str(e),
                "language": language,
                "task": task,
                "duration": duration
            }
    
    async def _execute_grpc_call(
        self, 
        endpoint: ServiceEndpoint, 
        request: AIVARequest
    ) -> Any:
        """åŸ·è¡Œ gRPC èª¿ç”¨ (ç›®å‰ç‚ºæ¨¡æ“¬å¯¦ç¾)
        
        TODO: å¯¦éš›å¯¦ç¾ gRPC èª¿ç”¨é‚è¼¯
        é€™è£¡éœ€è¦ï¼š
        1. å»ºç«‹ gRPC é€£æ¥
        2. åºåˆ—åŒ–è«‹æ±‚ç‚º Protobuf
        3. ç™¼é€è«‹æ±‚ä¸¦ç²å–éŸ¿æ‡‰
        4. ååºåˆ—åŒ–éŸ¿æ‡‰
        """
        
        # æ¨¡æ“¬ gRPC èª¿ç”¨å»¶é²
        await asyncio.sleep(0.1)
        
        # æ¨¡æ“¬ä¸åŒèªè¨€çš„éŸ¿æ‡‰
        if endpoint.language == ProgrammingLanguage.RUST:
            return {
                "processed_by": "rust_service",
                "task": request.task,
                "status": "completed",
                "performance": "high",
                "details": request.parameters
            }
        elif endpoint.language == ProgrammingLanguage.GO:
            return {
                "processed_by": "go_service", 
                "task": request.task,
                "status": "completed",
                "concurrency": "excellent",
                "details": request.parameters
            }
        elif endpoint.language == ProgrammingLanguage.TYPESCRIPT:
            return {
                "processed_by": "typescript_service",
                "task": request.task, 
                "status": "completed",
                "integration": "smooth",
                "details": request.parameters
            }
        else:
            raise ValueError(f"Unsupported language: {endpoint.language}")
    
    # ==================== ç®¡ç†æ–¹æ³• ====================
    
    async def get_service_status(self) -> Dict[str, Any]:
        """ç²å–æ‰€æœ‰æœå‹™ç‹€æ…‹"""
        status = {}
        
        for service_name, endpoint in self.endpoints.items():
            is_healthy = await self._check_service_health(service_name)
            status[service_name] = {
                "enabled": endpoint.enabled,
                "healthy": is_healthy,
                "endpoint": f"{endpoint.host}:{endpoint.port}",
                "language": endpoint.language.value
            }
        
        return status
    
    def enable_service(self, service_name: str):
        """å•Ÿç”¨æœå‹™"""
        if service_name in self.endpoints:
            self.endpoints[service_name].enabled = True
            logger.info(f"Service '{service_name}' enabled")
    
    def disable_service(self, service_name: str):
        """ç¦ç”¨æœå‹™"""
        if service_name in self.endpoints:
            self.endpoints[service_name].enabled = False
            logger.info(f"Service '{service_name}' disabled")
    
    async def close(self):
        """é—œé–‰å®¢æˆ¶ç«¯ï¼Œæ¸…ç†è³‡æº"""
        # é—œé–‰ gRPC å®¢æˆ¶ç«¯
        if self.grpc_client:
            await self.grpc_client.close()
            self.grpc_client = None
        
        # é—œé–‰é€£æ¥æ± ç­‰è³‡æº
        self._connection_pools.clear()
        logger.info("ğŸ”Œ AivaClient å·²é—œé–‰")


# å…¨å±€å–®ä¾‹å®¢æˆ¶ç«¯å¯¦ä¾‹ - å»¶é²åˆå§‹åŒ–
aiva_client = None


def get_aiva_client() -> AivaClient:
    """ç²å–å…¨å±€å®¢æˆ¶ç«¯å¯¦ä¾‹"""
    global aiva_client
    if aiva_client is None:
        aiva_client = AivaClient(auto_discover=False)  # ä¸è‡ªå‹•ç™¼ç¾é¿å…äº‹ä»¶å¾ªç’°å•é¡Œ
    return aiva_client


# ==================== ä¾¿åˆ©å‡½æ•¸ ====================

async def call_rust(task: str, params: Dict[str, Any]) -> Dict[str, Any]:
    """ä¾¿åˆ©å‡½æ•¸ï¼šèª¿ç”¨ Rust æœå‹™"""
    return await aiva_client.call_rust(task, params)


async def call_go(task: str, params: Dict[str, Any]) -> Dict[str, Any]:
    """ä¾¿åˆ©å‡½æ•¸ï¼šèª¿ç”¨ Go æœå‹™"""
    return await aiva_client.call_go(task, params)


async def call_typescript(task: str, params: Dict[str, Any]) -> Dict[str, Any]:
    """ä¾¿åˆ©å‡½æ•¸ï¼šèª¿ç”¨ TypeScript æœå‹™"""
    return await aiva_client.call_typescript(task, params)


async def get_service_status() -> Dict[str, Any]:
    """ä¾¿åˆ©å‡½æ•¸ï¼šç²å–æœå‹™ç‹€æ…‹"""
    return await aiva_client.get_service_status()